# src/routes/dashboard.routes.js
@@ -8,5 +8,6 @@ router.get('/metrics', auth(['admin','docente']), controller.getMetrics);
 // Actualizar o crear una metrica
 router.post('/metrics', auth(['admin','docente']), controller.updateMetric);
 router.get('/metrics/event/:id', auth(['admin','docente']), controller.getEventMetrics);
+router.get('/overview', auth(['admin','docente']), controller.getDashboardOverview);
 
 module.exports = router;
